--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,40 @@ pandocfilters==1.4.3
 pickleshare==0.7.5
 sklearn==0.0
 scikit-learn==0.24.2
+absl-py==0.13.0
+altair==4.1.0
+argon2-cffi==20.1.0
+astor==0.8.1
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+blinker==1.4
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+Command==0.1.0
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.7.1
+entrypoints==0.3
+gast==0.4.0
+gitdb==4.0.7
+GitPython==3.1.17
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+missingno==0.4.2
+mistune==0.8.4
+multimethod==1.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+opt-einsum==3.3.0
+packaging==20.9
+
