--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,21 @@ networkx==2.5.1
 opt-einsum==3.3.0
 packaging==20.9
 Bottleneck==1.3.2
+tzlocal==2.1
+update==0.0.1
+urllib3==1.26.5
+validators==0.18.2
+visions==0.7.1
+watchdog==2.1.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+termcolor==1.1.0
+terminado==0.10.0
+testpath==0.5.0
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.61.1
+traitlets==5.0.5
