--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,67 @@
-appnope==0.1.0
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-cycler==0.10.0
-decorator==4.4.1
-defusedxml==0.6.0
-entrypoints==0.3
-Flask==1.1.1
-idna==2.8
-importlib-metadata==0.23
-inflection==0.3.1
-ipykernel==5.1.3
-ipython==7.9.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-itsdangerous==1.1.0
-jedi==0.15.1
-Jinja2==2.10.3
-joblib==0.14.1
-jsonschema==3.1.1
-kiwisolver==1.1.0
-lxml==4.4.1
-MarkupSafe==1.1.1
-matplotlib==3.1.2
-mistune==0.8.4
-more-itertools==7.2.0
-nbconvert==5.6.1
-nbformat==4.4.0
-notebook==6.0.2
-numpy==1.17.3
-pandas==0.25.3
-pandocfilters==1.4.2
-parso==0.5.1
-pexpect==4.7.0
-pickleshare==0.7.5
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-ptyprocess==0.6.0
-Pygments==2.4.2
-pyparsing==2.4.5
-pyrsistent==0.15.5
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.1.2
-pyzmq==18.1.0
-qtconsole==4.5.5
-requests==2.22.0
-scikit-learn==0.22
-scipy==1.3.2
-seaborn==0.9.0
-Send2Trash==1.5.0
-six==1.13.0
-sklearn==0.0
-tabulate==0.8.6
-terminado==0.8.2
-testpath==0.4.4
-tornado==6.0.3
-traitlets==4.3.3
-urllib3==1.25.7
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.16.0
-zipp==0.6.0
+Flask==2.0.1
+jsonschema==3.2.0
 lightgbm==3.2.1
+numpy==1.19.5
+requests==2.25.1
+requests-oauthlib==1.3.0
+pandas==1.2.4
+pandas-profiling==3.0.0
+pandocfilters==1.4.3
+pickleshare==0.7.5
+sklearn==0.0
+scikit-learn==0.24.2
+absl-py==0.13.0
+altair==4.1.0
+argon2-cffi==20.1.0
+astor==0.8.1
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+blinker==1.4
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+Command==0.1.0
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.7.1
+entrypoints==0.3
+gast==0.4.0
+gitdb==4.0.7
+GitPython==3.1.17
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+missingno==0.4.2
+mistune==0.8.4
+multimethod==1.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+opt-einsum==3.3.0
+packaging==20.9
+Bottleneck==1.3.2
+tzlocal==2.1
+update==0.0.1
+urllib3==1.26.5
+validators==0.18.2
+visions==0.7.1
+watchdog==2.1.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+termcolor==1.1.0
+terminado==0.10.0
+testpath==0.5.0
+threadpoolctl==2.1.0
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.61.1
+traitlets==5.0.5
