--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ bs4==0.0.1
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.5
+inflection==0.5.1
 chardet==4.0.0
 click==7.1.2
 Command==0.1.0
@@ -45,9 +46,6 @@ jedi==0.18.0
 Jinja2==3.0.1
 joblib==1.0.1
 jsonschema==3.2.0
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lightgbm==3.2.1
 lxml==4.6.3
@@ -113,7 +111,6 @@ sklearn==0.0
 smmap==4.0.0
 SQLAlchemy==1.4.19
 statsmodels==0.12.2
-streamlit==0.82.0
 style==1.1.0
 tabulate==0.8.9
 tangled-up-in-unicode==0.1.0
